# internal/entity/channel.go
@@ -1,5 +1,7 @@
 package entity
 
+import "database/sql"
+
 type ChannelKind string
 
 const (
@@ -8,9 +10,28 @@ const (
 )
 
 type Channel struct {
-	Id         int    `db:"id"`
-	Kind       string `db:"kind"`
-	Email      string `db:"email"`
-	WebhookURL string `db:"webhook_url"`
-	UserId     int    `db:"user_id"`
+	Id         int         `db:"id"`
+	Kind       ChannelKind `db:"kind"`
+	Email      string      `db:"email"`
+	WebhookURL string      `db:"webhook_url"`
+	UserId     int         `db:"user_id"`
+}
+
+type ChannelShort struct {
+	Id         int            `db:"id"`
+	Kind       ChannelKind    `db:"kind"`
+	Email      sql.NullString `db:"email"`
+	WebhookURL sql.NullString `db:"webhook_url"`
+}
+
+type CreateChannel struct {
+	Kind       ChannelKind
+	Email      string
+	WebhookURL string
+	UserId     int
+}
+
+type DeleteChannel struct {
+	Id     int
+	UserId int
 }
